packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_jsx_keyed_dev.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 2466
expression: output
---
==INPUT==


import { component$, useStore } from '@builder.io/qwik';

export const App = component$((props: Stuff) => {
	return (
		<>
			<Cmp key="stuff"></Cmp>
			<Cmp></Cmp>
			<Cmp prop="23"></Cmp>
			<Cmp prop="23" key={props.stuff}></Cmp>
			<p key={props.stuff}>Hello Qwik</p>
		</>
	);
});

============================= project/index.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrlDEV } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrlDEV(()=>import("./app_component_kglyfbhvjc0.js"), "App_component_KGLYFBhvJc0", {
    file: "/src/project/project/index.tsx",
    lo: 90,
    hi: 285,
    displayName: "App_component"
}));


Some("{\"version\":3,\"sources\":[\"/src/project/project/index.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM;;;;;IAUhB\"}")
============================= project/app_component_kglyfbhvjc0.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@builder.io/qwik/jsx-runtime";
import { _jsxSorted } from "@builder.io/qwik";
export const App_component_KGLYFBhvJc0 = (props)=>{
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted(Cmp, null, null, null, 3, "stuff", {
            fileName: "project/index.tsx",
            lineNumber: 7,
            columnNumber: 4
        }),
        /*#__PURE__*/ _jsxSorted(Cmp, null, null, null, 3, "Q6_0", {
            fileName: "project/index.tsx",
            lineNumber: 8,
            columnNumber: 4
        }),
        /*#__PURE__*/ _jsxSorted(Cmp, null, {
            prop: "23"
        }, null, 3, "Q6_1", {
            fileName: "project/index.tsx",
            lineNumber: 9,
            columnNumber: 4
        }),
        /*#__PURE__*/ _jsxSorted(Cmp, null, {
            prop: "23"
        }, null, 3, props.stuff, {
            fileName: "project/index.tsx",
            lineNumber: 10,
            columnNumber: 4
        }),
        /*#__PURE__*/ _jsxSorted("p", null, null, "Hello Qwik", 3, props.stuff, {
            fileName: "project/index.tsx",
            lineNumber: 11,
            columnNumber: 4
        })
    ], 1, "Q6_2", {
        fileName: "project/index.tsx",
        lineNumber: 6,
        columnNumber: 3
    });
};


Some("{\"version\":3,\"sources\":[\"/src/project/project/index.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B,CAAC;IAC9B,qBACC;sBACC,WAAC,0BAAQ;;;;;sBACT,WAAC;;;;;sBACD,WAAC;YAAI,MAAK;;;;;;sBACV,WAAC;YAAI,MAAK;oBAAU,MAAM,KAAK;;;;;sBAC/B,WAAC,iBAAoB,iBAAb,MAAM,KAAK;;;;;;;;;;AAGtB\"}")
/*
{
  "origin": "project/index.tsx",
  "name": "App_component_KGLYFBhvJc0",
  "entry": null,
  "displayName": "App_component",
  "hash": "KGLYFBhvJc0",
  "canonicalFilename": "app_component_kglyfbhvjc0",
  "path": "project",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    90,
    285
  ]
}
*/
== DIAGNOSTICS ==

[]
